--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1382,10 +1382,7 @@
 
 </div>
 
-
-  
-
-  
+ 
 
 
 <div class="analysis-section" style="max-width: 900px; margin: 0 auto 50px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
@@ -1519,11 +1516,11 @@
       </div>
     </div>
   
-
-  <div style="text-align: right; padding-top: 10px; margin-top: 10px; border-top: 1px solid #edf2f7; box-sizing: border-box; width: 100%;">
+<div style="text-align: right; padding: 10px 25px 0 0; margin-top: 10px; border-top: 1px solid #edf2f7; box-sizing: border-box; width: 100%;">
     <span style="font-size: 11px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Feb. 9, 2026</span>
   </div>
 </div>
+  
 
 <div style="width: 100%; box-sizing: border-box;">
   <div style="margin-top: 10px; background: #ffffff; padding: 20px 25px; border-radius: 18px; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box; width: 100%;">
