--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1530,7 +1530,7 @@
     <p style="margin: 0; font-size: 14px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
   <b>Performance Tracking & Metrics:</b> All <b>competitive rounds</b> are logged at the round level for cumulative freshman-season reference. Recorded metrics include <b>field-relative scoring position, round variance, and counting score designation</b>.<br><br>
   <b>Course Context & Lineup Records:</b> <b>Event-specific course data</b> (par, yardage, and field scoring averages) is archived with each competition. Rounds competed as part of the <b>UTSA travel squad</b> are logged with corresponding team lineup and counting score status.<br><br>
-  <b>Technical Documentation:</b> Technical inputs introduced under <b>Bryan Gathright</b> are recorded within <b>longitudinal performance logs</b>. Swing-related variables and competitive scoring outputs are tracked as part of the cumulative freshman-season dataset.<br><br>
+  <b>Technical Documentation:</b> Round-level performance variables and competitive scoring outputs are logged within the cumulative freshman-season dataset for reference.<br><br>
   <b>Event Record — Compadres Collegiate:</b> Rounds were played at <b>Iberostar Playa Paraíso GC</b> (Par 72, 6,683 yards). Field scoring averages were recorded at <b>77.10 overall</b> (R1: 78.04 | R2: 77.25 | R3: 76.00). All three rounds were logged as <b>counting scores</b>. Event scoring outcome was recorded as <b>Even Par relative to the field scoring baseline</b>.<br><br>
   <b>Scoring Record Summary:</b> <b>Counting score rate</b> is documented at <b>100% (3/3 rounds — event)</b> and <b>93.3% (14/15 rounds — freshman season cumulative)</b>.
 </p>
