--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1476,7 +1476,7 @@
         <div style="display: inline-block; font-size: 11px; color: #1a73e8; margin-top: 12px; font-weight: 800; background: rgba(26, 115, 232, 0.08); padding: 4px 15px; border-radius: 25px;">Metric: 14/15 Rounds Recorded</div>
       </div>
       <div style="padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
-        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Team Contribution Share</span>
+        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Points Share (Clippd w)</span>
         <span style="font-size: 30px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">32.78%</span>
         <div style="margin-top: 14px; padding-top: 14px; border-top: 1px solid #edf2f7; display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px;">
           <div style="text-align: center;">
@@ -1496,8 +1496,8 @@
     </div>
 
     <div style="margin-top: 12px; font-size: 11px; color: #94a3b8; font-weight: 700; line-height: 1.4; width: 100%; text-align: center; box-sizing: border-box;">
-      Team contribution is defined as the share of Clippd (w) Points among participating team members.<br>
-      Note: Team Total reflects participating team-member entries (Individual-only entries excluded).
+      Points Share represents the proportion of Clippd (w) Points relative to the team total.<br>
+      Note: Team Total includes participating team-member entries only (individual-only entries excluded).
     </div>
   </div>
 
