--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1472,7 +1472,7 @@
       </div>
       <div style="padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
         <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Scoring Consistency & Reliability</span>
-        <span style="font-size: 24px; font-weight: 900; color: #0c2340;">93.3% Counting Score</span>
+        <span style="font-size: 24px; font-weight: 900; color: #0c2340; line-height: 1.2;"> 93.3%<br> <span style="font-size: 15px;">Counting Score</span></span>
         <div style="display: inline-block; font-size: 11px; color: #1a73e8; margin-top: 12px; font-weight: 800; background: rgba(26, 115, 232, 0.08); padding: 4px 15px; border-radius: 25px;">Metric: 14/15 Rounds Recorded</div>
       </div>
       <div style="padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
