--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1465,7 +1465,7 @@
 
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 20px; box-sizing: border-box; width: 100%;">
       <div style="padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
-        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Head-to-Head Performance</span>
+        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Head-to-Head Record</span>
         <span style="font-size: 24px; font-weight: 900; color: #0c2340;">289-98-12</span>
         <div style="display: block; font-size: 13px; color: #64748b; margin-top: 5px; font-weight: 700;">Win Rate: 72.4%</div>
         <div style="display: inline-block; font-size: 11px; color: #806600; margin-top: 12px; font-weight: 800; background: rgba(128, 102, 0, 0.08); padding: 4px 15px; border-radius: 25px;">STATUS: 15-Round Cumulative</div>
