--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1413,7 +1413,7 @@
       <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #806600; padding-left: 15px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path><path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"></path><path d="M4 22h16"></path><path d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"></path><path d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"></path><path d="M18 2H6v7a6 6 0 0 0 12 0V2z"></path></svg>
         UTSA TEAM ROSTER METRICS 
-        <span style="font-size: 13px; color: #7f8c8d; font-weight: 600; letter-spacing: 0px;">(Freshman Season — 15-Round Cumulative)</span>
+        <span style="font-size: 13px; color: #7f8c8d; font-weight: 600; letter-spacing: 0px;">(Freshman Season)</span>
       </h3>
     </div>
 
@@ -1444,7 +1444,7 @@
       <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #0c2340; padding-left: 15px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path><path d="M22 12A10 10 0 0 0 12 2v10z"></path></svg>
         COMPETITIVE ANALYSIS 
-        <span style="font-size: 13px; color: #7f8c8d; font-weight: 600; letter-spacing: 0px;">(Freshman Season — 15-Round Cumulative)</span>
+        <span style="font-size: 13px; color: #7f8c8d; font-weight: 600; letter-spacing: 0px;">(Freshman Season)</span>
       </h3>
     </div>
 
@@ -1461,23 +1461,24 @@
         <div style="display: inline-block; font-size: 11px; color: #1a73e8; margin-top: 12px; font-weight: 800; background: rgba(26, 115, 232, 0.08); padding: 4px 15px; border-radius: 25px;">Metric: 14/15 Rounds Recorded</div>
       </div>
       <div style="padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
-        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Points Share (Clippd w)</span>
-        <span style="font-size: 30px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">32.78%</span>
-        <div style="margin-top: 14px; padding-top: 14px; border-top: 1px solid #edf2f7; display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px;">
-          <div style="text-align: center;">
-            <div style="font-size: 9px; color: #64748b; font-weight: 900; text-transform: uppercase;">(w) Points</div>
-            <div style="font-size: 14px; color: #0c2340; font-weight: 900;">168.24</div>
-          </div>
-          <div style="text-align: center;">
-            <div style="font-size: 9px; color: #64748b; font-weight: 900; text-transform: uppercase;">Team Total</div>
-            <div style="font-size: 14px; color: #0c2340; font-weight: 900;">513.29</div>
-          </div>
-          <div style="text-align: center;">
-            <div style="font-size: 9px; color: #64748b; font-weight: 900; text-transform: uppercase;">Scope</div>
-            <div style="font-size: 11px; color: #0c2340; font-weight: 900; margin-top: 2px;">15 Rounds</div>
-          </div>
-        </div>
-      </div>
+  <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Points Share (Clippd w)</span>
+  <span style="font-size: 30px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">32.78%</span>
+  <div style="margin-top: 14px; padding-top: 14px; border-top: 1px solid #edf2f7; display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px;">
+    <div style="text-align: center;">
+      <div style="font-size: 9px; color: #64748b; font-weight: 900; text-transform: uppercase;">(w) Points</div>
+      <div style="font-size: 14px; color: #0c2340; font-weight: 900;">168.24</div>
+    </div>
+    <div style="text-align: center;">
+      <div style="font-size: 9px; color: #64748b; font-weight: 900; text-transform: uppercase;">Team Total</div>
+      <div style="font-size: 14px; color: #0c2340; font-weight: 900;">513.29</div>
+    </div>
+    <div style="text-align: center;">
+      <div style="font-size: 9px; color: #64748b; font-weight: 900; text-transform: uppercase;">Scope</div>
+      <div style="font-size: 11px; color: #0c2340; font-weight: 900; margin-top: 2px;">15 Rounds</div>
+    </div>
+  </div>
+  <div style="display: inline-block; font-size: 11px; color: #806600; margin-top: 12px; font-weight: 800; background: rgba(128, 102, 0, 0.1); padding: 4px 15px; border-radius: 25px;">STATUS: 15-Round Cumulative</div>
+</div>
     </div>
 
     <div style="margin-top: 12px; font-size: 11px; color: #94a3b8; font-weight: 700; line-height: 1.4; width: 100%; text-align: center; box-sizing: border-box;">
@@ -1495,7 +1496,7 @@
         <span style="word-break: keep-all;">PERFORMANCE & STRATEGY ANALYSIS</span>
       </h3>
       <p style="margin: 0; color: #806600; font-size: 13px; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px; padding-left: 17px; word-break: keep-all;">
-        (Fr. Season — 15-Round Cumulative)
+        (Freshman Season)
       </p>
     </div>
   </div>
