--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1488,20 +1488,20 @@
   </div>
 
 
-<div style="width: 100%; margin-bottom: 15px; border: 1px solid #e2e8f0; border-radius: 20px; padding: 18px 0; background: #ffffff; box-shadow: 0 15px 35px rgba(0,0,0,0.06); overflow: hidden; box-sizing: border-box;">
-  <div style="border-bottom: 2px solid #f1f1f1; padding: 0 20px 15px 0; margin-bottom: 0; box-sizing: border-box;">
+<div style="width: 100%; margin-bottom: 25px; box-sizing: border-box;">
+  <div style="border-bottom: 2px solid #f1f1f1; padding-bottom: 15px; margin-bottom: 0; box-sizing: border-box;">
     <div style="display: flex; align-items: center; justify-content: flex-start; flex-wrap: wrap; gap: 8px;">
-      <h3 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 900; letter-spacing: 0.5px; display: flex; align-items: center; gap: 10px; border-left: 5px solid #0c2340; padding-left: 12px; box-sizing: border-box;">
+      <h3 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 900; letter-spacing: 0.5px; display: flex; align-items: center; gap: 10px; border-left: 5px solid #0c2340; padding-left: 15px; box-sizing: border-box;">
         <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink: 0;"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>
         <span style="word-break: keep-all;">PERFORMANCE & STRATEGY ANALYSIS</span>
       </h3>
-      <p style="margin: 0; color: #806600; font-size: 13px; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px; padding-left: 17px; word-break: keep-all;">
+      <p style="margin: 0; color: #806600; font-size: 13px; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px; word-break: keep-all;">
         (Freshman Season)
       </p>
     </div>
   </div>
-  
-  <div style="text-align: right; padding: 10px 20px 0 0; margin-top: 10px; border-top: 1px solid #edf2f7; box-sizing: border-box; width: 100%;">
+
+  <div style="text-align: right; padding: 10px 0 0 0; margin-top: 0; box-sizing: border-box; width: 100%;">
     <span style="font-size: 11px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Feb. 9, 2026</span>
   </div>
 </div>
