--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1447,39 +1447,52 @@
         <span style="font-size: 13px; color: #7f8c8d; font-weight: 600; letter-spacing: 0px;">(Freshman Season)</span>
       </h3>
     </div>
-
-    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 20px; box-sizing: border-box; width: 100%;">
-      <div style="padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
-        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Head-to-Head Record</span>
-        <span style="font-size: 24px; font-weight: 900; color: #0c2340;">289-98-12</span>
-        <div style="display: block; font-size: 13px; color: #64748b; margin-top: 5px; font-weight: 700;">Win Rate: 72.4%</div>
-        <div style="display: inline-block; font-size: 11px; color: #806600; margin-top: 12px; font-weight: 800; background: rgba(128, 102, 0, 0.08); padding: 4px 15px; border-radius: 25px;">STATUS: 15-Round Cumulative</div>
-      </div>
-      <div style="padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
-        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Counting Score Record</span>
-        <span style="font-size: 24px; font-weight: 900; color: #0c2340; line-height: 1.2;"> 93.3%<br> <span style="font-size: 15px;">Counting Score</span></span>
-        <div style="display: inline-block; font-size: 11px; color: #1a73e8; margin-top: 12px; font-weight: 800; background: rgba(26, 115, 232, 0.08); padding: 4px 15px; border-radius: 25px;">Metric: 14/15 Rounds Recorded</div>
-      </div>
-      <div style="padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
-  <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Points Share (Clippd w)</span>
-  <span style="font-size: 30px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">32.78%</span>
-  <div style="margin-top: 14px; padding-top: 14px; border-top: 1px solid #edf2f7; display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px;">
-    <div style="text-align: center;">
-      <div style="font-size: 9px; color: #64748b; font-weight: 900; text-transform: uppercase;">(w) Points</div>
-      <div style="font-size: 14px; color: #0c2340; font-weight: 900;">168.24</div>
+<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 20px; box-sizing: border-box; width: 100%;">
+  
+  <div style="display: flex; flex-direction: column; justify-content: space-between; padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
+    <div>
+      <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Head-to-Head Record</span>
+      <span style="font-size: 24px; font-weight: 900; color: #0c2340;">289-98-12</span>
+      <div style="display: block; font-size: 13px; color: #64748b; margin-top: 5px; font-weight: 700;">Win Rate: 72.4%</div>
     </div>
-    <div style="text-align: center;">
-      <div style="font-size: 9px; color: #64748b; font-weight: 900; text-transform: uppercase;">Team Total</div>
-      <div style="font-size: 14px; color: #0c2340; font-weight: 900;">513.29</div>
-    </div>
-    <div style="text-align: center;">
-      <div style="font-size: 9px; color: #64748b; font-weight: 900; text-transform: uppercase;">Scope</div>
-      <div style="font-size: 11px; color: #0c2340; font-weight: 900; margin-top: 2px;">15 Rounds</div>
+    <div style="margin-top: auto;">
+      <div style="display: inline-block; font-size: 11px; color: #806600; margin-top: 15px; font-weight: 800; background: rgba(128, 102, 0, 0.08); padding: 4px 15px; border-radius: 25px;">STATUS: 15-Round Cumulative</div>
     </div>
   </div>
-  <div style="display: inline-block; font-size: 11px; color: #806600; margin-top: 12px; font-weight: 800; background: rgba(128, 102, 0, 0.1); padding: 4px 15px; border-radius: 25px;">STATUS: 15-Round Cumulative</div>
-</div>
+
+  <div style="display: flex; flex-direction: column; justify-content: space-between; padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
+    <div>
+      <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Counting Score Record</span>
+      <span style="font-size: 24px; font-weight: 900; color: #0c2340; line-height: 1.2;">93.3%<br><span style="font-size: 15px;">Counting Score</span></span>
     </div>
+    <div style="margin-top: auto;">
+      <div style="display: inline-block; font-size: 11px; color: #1a73e8; margin-top: 15px; font-weight: 800; background: rgba(26, 115, 232, 0.08); padding: 4px 15px; border-radius: 25px;">Metric: 14/15 Rounds Recorded</div>
+    </div>
+  </div>
+
+  <div style="display: flex; flex-direction: column; justify-content: space-between; padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
+    <div>
+      <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Points Share (Clippd w)</span>
+      <span style="font-size: 30px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">32.78%</span>
+      <div style="margin-top: 14px; padding-top: 14px; border-top: 1px solid #edf2f7; display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px;">
+        <div>
+          <div style="font-size: 9px; color: #64748b; font-weight: 900; text-transform: uppercase;">(w) Points</div>
+          <div style="font-size: 14px; color: #0c2340; font-weight: 900;">168.24</div>
+        </div>
+        <div>
+          <div style="font-size: 9px; color: #64748b; font-weight: 900; text-transform: uppercase;">Team Total</div>
+          <div style="font-size: 14px; color: #0c2340; font-weight: 900;">513.29</div>
+        </div>
+        <div>
+          <div style="font-size: 9px; color: #64748b; font-weight: 900; text-transform: uppercase;">Scope</div>
+          <div style="font-size: 11px; color: #0c2340; font-weight: 900; margin-top: 2px;">15 Rounds</div>
+        </div>
+      </div>
+    </div>
+    <div style="margin-top: auto;">
+      <div style="display: inline-block; font-size: 11px; color: #806600; margin-top: 15px; font-weight: 800; background: rgba(128, 102, 0, 0.1); padding: 4px 15px; border-radius: 25px;">STATUS: 15-Round Cumulative</div>
+    </div>
+  </div>
 
     <div style="margin-top: 12px; font-size: 11px; color: #94a3b8; font-weight: 700; line-height: 1.4; width: 100%; text-align: center; box-sizing: border-box;">
       Points Share represents the proportion of Clippd (w) Points relative to the team total.<br>
