--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1494,10 +1494,12 @@
     </div>
   </div>
 
-<div style="margin-top: 12px; margin-bottom: 40px; font-size: 11px; color: #94a3b8; font-weight: 700; line-height: 1.4; width: 100%; text-align: center; box-sizing: border-box;">
-      Points Share represents the proportion of Clippd (w) Points relative to the team total.<br>
-      Note: Team Total includes participating team-member entries only (individual-only entries excluded).
-    </div>
+<div style="clear: both; margin-top: 20px; margin-bottom: 40px; font-size: 11px; color: #94a3b8; font-weight: 700; line-height: 1.6; width: 100%; text-align: center; box-sizing: border-box; display: block;">
+  Points Share represents the proportion of Clippd (w) Points relative to the team total.<br>
+  Note: Team Total includes participating team-member entries only (individual-only entries excluded).
+</div>
+
+  
   </div> <div style="width: 100%; margin-bottom: 25px; box-sizing: border-box;">
   <div style="border-bottom: 2px solid #f1f1f1; padding-bottom: 15px; margin-bottom: 0; box-sizing: border-box;">
     <div style="display: flex; align-items: center; justify-content: flex-start; flex-wrap: wrap; gap: 8px;">
