--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1494,13 +1494,12 @@
     </div>
   </div>
 
-<div style="clear: both; margin-top: 20px; margin-bottom: 40px; font-size: 11px; color: #94a3b8; font-weight: 700; line-height: 1.6; width: 100%; text-align: center; box-sizing: border-box; display: block;">
+<div style="margin: 20px 0 40px 0; font-size: 11px; color: #94a3b8; font-weight: 700; line-height: 1.6; width: 100%; text-align: center; box-sizing: border-box; display: inline-block;">
   Points Share represents the proportion of Clippd (w) Points relative to the team total.<br>
   Note: Team Total includes participating team-member entries only (individual-only entries excluded).
 </div>
 
-  
-  </div> <div style="width: 100%; margin-bottom: 25px; box-sizing: border-box;">
+<div style="width: 100%; margin-bottom: 25px; box-sizing: border-box;">
   <div style="border-bottom: 2px solid #f1f1f1; padding-bottom: 15px; margin-bottom: 0; box-sizing: border-box;">
     <div style="display: flex; align-items: center; justify-content: flex-start; flex-wrap: wrap; gap: 8px;">
       <h3 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 900; letter-spacing: 0.5px; display: flex; align-items: center; gap: 10px; border-left: 5px solid #0c2340; padding-left: 15px; box-sizing: border-box;">
@@ -1513,7 +1512,7 @@
     </div>
   </div>
 
-  <div style="text-align: right; padding: 10px 0 0 0; margin-top: 0; box-sizing: border-box; width: 100%;">
+  <div style="text-align: right; padding: 10px 15px 0 0; margin-top: 0; box-sizing: border-box; width: 100%;">
     <span style="font-size: 11px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Feb. 9, 2026</span>
   </div>
 </div>
