--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1513,7 +1513,7 @@
     </div>
   </div>
 
-  <div style="text-align: right; padding: 10px 0 0 0; margin-top: 0; box-sizing: border-box; width: 100%;">
+  <div style="text-align: right; padding: 10px 15px 0 0; margin-top: 0; box-sizing: border-box; width: 100%;">
     <span style="font-size: 11px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Feb. 9, 2026</span>
   </div>
 </div>
