--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1499,6 +1499,8 @@
   Note: Team Total includes participating team-member entries only (individual-only entries excluded).
 </div>
 
+  </div>
+
   
   <div style="width: 100%; margin-bottom: 25px; box-sizing: border-box;">
   <div style="border-bottom: 2px solid #f1f1f1; padding-bottom: 15px; margin-bottom: 0; box-sizing: border-box;">
