--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1470,38 +1470,38 @@
     </div>
   </div>
 
-  <div style="display: flex; flex-direction: column; justify-content: space-between; padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
-    <div>
-      <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Points Share (Clippd w)</span>
-      <span style="font-size: 30px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">32.78%</span>
-      <div style="margin-top: 14px; padding-top: 14px; border-top: 1px solid #edf2f7; display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px;">
-        <div>
-          <div style="font-size: 9px; color: #64748b; font-weight: 900; text-transform: uppercase;">(w) Points</div>
-          <div style="font-size: 14px; color: #0c2340; font-weight: 900;">168.24</div>
-        </div>
-        <div>
-          <div style="font-size: 9px; color: #64748b; font-weight: 900; text-transform: uppercase;">Team Total</div>
-          <div style="font-size: 14px; color: #0c2340; font-weight: 900;">513.29</div>
-        </div>
-        <div>
-          <div style="font-size: 9px; color: #64748b; font-weight: 900; text-transform: uppercase;">Scope</div>
-          <div style="font-size: 11px; color: #0c2340; font-weight: 900; margin-top: 2px;">15 Rounds</div>
-        </div>
+  
+ <div style="display: flex; flex-direction: column; justify-content: space-between; padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
+  <div>
+    <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Points Share (Clippd w)</span>
+    <span style="font-size: 30px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">32.78%</span>
+    <div style="margin-top: 14px; padding-top: 14px; border-top: 1px solid #edf2f7; display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px;">
+      <div>
+        <div style="font-size: 9px; color: #64748b; font-weight: 900; text-transform: uppercase;">(w) Points</div>
+        <div style="font-size: 14px; color: #0c2340; font-weight: 900;">168.24</div>
+      </div>
+      <div>
+        <div style="font-size: 9px; color: #64748b; font-weight: 900; text-transform: uppercase;">Team Total</div>
+        <div style="font-size: 14px; color: #0c2340; font-weight: 900;">513.29</div>
+      </div>
+      <div>
+        <div style="font-size: 9px; color: #64748b; font-weight: 900; text-transform: uppercase;">Scope</div>
+        <div style="font-size: 11px; color: #0c2340; font-weight: 900; margin-top: 2px;">15 Rounds</div>
       </div>
     </div>
-    <div style="margin-top: auto;">
-      <div style="display: inline-block; font-size: 11px; color: #806600; margin-top: 15px; font-weight: 800; background: rgba(128, 102, 0, 0.1); padding: 4px 15px; border-radius: 25px;">STATUS: 15-Round Cumulative</div>
-    </div>
   </div>
-
-
-
-<div style="margin: 20px 0 40px 0; font-size: 11px; color: #94a3b8; font-weight: 700; line-height: 1.6; width: 100%; text-align: center; box-sizing: border-box; display: block; clear: both;">
+  <div style="margin-top: auto;">
+    <div style="display: inline-block; font-size: 11px; color: #806600; margin-top: 15px; font-weight: 800; background: rgba(128, 102, 0, 0.1); padding: 4px 15px; border-radius: 25px;">STATUS: 15-Round Cumulative</div>
+  </div>
+</div> <div style="margin: 25px auto 40px auto; font-size: 11px; color: #94a3b8; font-weight: 700; line-height: 1.6; width: 100%; text-align: center; box-sizing: border-box; display: block; clear: both;">
   Points Share represents the proportion of Clippd (w) Points relative to the team total.<br>
   Note: Team Total includes participating team-member entries only (individual-only entries excluded).
 </div>
 
-<div style="width: 100%; margin-bottom: 25px; box-sizing: border-box;">
+  </div>
+
+  
+  <div style="width: 100%; margin-bottom: 25px; box-sizing: border-box;">
   <div style="border-bottom: 2px solid #f1f1f1; padding-bottom: 15px; margin-bottom: 0; box-sizing: border-box;">
     <div style="display: flex; align-items: center; justify-content: flex-start; flex-wrap: wrap; gap: 8px;">
       <h3 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 900; letter-spacing: 0.5px; display: flex; align-items: center; gap: 10px; border-left: 5px solid #0c2340; padding-left: 15px; box-sizing: border-box;">
@@ -1514,7 +1514,7 @@
     </div>
   </div>
 
-  <div style="text-align: right; padding: 10px 25px 0 0; margin-top: 0; box-sizing: border-box; width: 100%;">
+  <div style="text-align: right; padding: 10px 15px 0 0; margin-top: 0; box-sizing: border-box; width: 100%;">
     <span style="font-size: 11px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Feb. 9, 2026</span>
   </div>
 </div>
