--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1506,39 +1506,39 @@
   
 
   
+  <div class="analysis-bottom-section" style="width: 100%; box-sizing: border-box;">
+  
   <div style="width: 100%; margin-bottom: 25px; box-sizing: border-box;">
-  <div style="border-bottom: 2px solid #f1f1f1; padding-bottom: 15px; margin-bottom: 0; box-sizing: border-box;">
-    <div style="display: flex; align-items: center; justify-content: flex-start; flex-wrap: wrap; gap: 8px;">
-      <h3 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 900; letter-spacing: 0.5px; display: flex; align-items: center; gap: 10px; border-left: 5px solid #0c2340; padding-left: 15px; box-sizing: border-box;">
-        <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink: 0;"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>
-        <span style="word-break: keep-all;">PERFORMANCE & STRATEGY ANALYSIS</span>
-      </h3>
-      <p style="margin: 0; color: #806600; font-size: 13px; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px; word-break: keep-all;">
-        (Freshman Season)
-      </p>
+    <div style="border-bottom: 2px solid #f1f1f1; padding-bottom: 15px; margin-bottom: 0; box-sizing: border-box;">
+      <div style="display: flex; align-items: center; justify-content: flex-start; flex-wrap: wrap; gap: 8px;">
+        <h3 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 900; letter-spacing: 0.5px; display: flex; align-items: center; gap: 10px; border-left: 5px solid #0c2340; padding-left: 15px; box-sizing: border-box;">
+          <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink: 0;"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>
+          <span style="word-break: keep-all;">PERFORMANCE & STRATEGY ANALYSIS</span>
+        </h3>
+        <p style="margin: 0; color: #806600; font-size: 13px; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px; word-break: keep-all;">
+          (Freshman Season)
+        </p>
+      </div>
+    </div>
+
+    <div style="text-align: right; padding: 10px 15px 0 0; margin-top: 0; box-sizing: border-box; width: 100%;">
+      <span style="font-size: 11px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Feb. 9, 2026</span>
     </div>
   </div>
 
-  <div style="text-align: right; padding: 10px 15px 0 0; margin-top: 0; box-sizing: border-box; width: 100%;">
-    <span style="font-size: 11px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Feb. 9, 2026</span>
-  </div>
-</div>
-  
-  
-
-<div style="width: 100%; box-sizing: border-box;">
-  <div style="margin-top: 10px; background: #ffffff; padding: 20px 25px; border-radius: 18px; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box; width: 100%;">
-    <h4 style="margin: 0 0 10px 0; color: #0c2340; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
-      <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
-      Summary (Tracking Scope)
-    </h4>
-    <p style="margin: 0; font-size: 14px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
-  <b>Performance Tracking & Metrics:</b> All <b>competitive rounds</b> are logged at the round level for cumulative freshman-season reference. Recorded metrics include <b>field-relative scoring position, round variance, and counting score designation</b>.<br><br>
-  <b>Course Context & Lineup Records:</b> <b>Event-specific course data</b> (par, yardage, and field scoring averages) is archived with each competition. Rounds competed as part of the <b>UTSA travel squad</b> are logged with corresponding team lineup and counting score status.<br><br>
-  <b>Technical Documentation:</b> Round-level performance variables and competitive scoring outputs are logged within the cumulative freshman-season dataset for reference.<br><br>
-  <b>Event Record — Compadres Collegiate:</b> Rounds were played at <b>Iberostar Playa Paraíso GC</b> (Par 72, 6,683 yards). Field scoring averages were recorded at <b>77.10 overall</b> (R1: 78.04 | R2: 77.25 | R3: 76.00). All three rounds were logged as <b>counting scores</b>. Event scoring outcome was recorded as <b>Even Par relative to the field scoring baseline</b>.<br><br>
-  <b>Scoring Record Summary:</b> <b>Counting score rate</b> is documented at <b>100% (3/3 rounds — event)</b> and <b>93.3% (14/15 rounds — freshman season cumulative)</b>.
-</p>
+  <div style="width: 100%; box-sizing: border-box;">
+    <div style="margin-top: 10px; background: #ffffff; padding: 20px 25px; border-radius: 18px; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box; width: 100%;">
+      <h4 style="margin: 0 0 10px 0; color: #0c2340; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
+        Summary (Tracking Scope)
+      </h4>
+      <p style="margin: 0; font-size: 14px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
+        <b>Performance Tracking & Metrics:</b> All <b>competitive rounds</b> are logged at the round level for cumulative freshman-season reference. Recorded metrics include <b>field-relative scoring position, round variance, and counting score designation</b>.<br><br>
+        <b>Course Context & Lineup Records:</b> <b>Event-specific course data</b> (par, yardage, and field scoring averages) is archived with each competition. Rounds competed as part of the <b>UTSA travel squad</b> are logged with corresponding team lineup and counting score status.<br><br>
+        <b>Technical Documentation:</b> Round-level performance variables and competitive scoring outputs are logged within the cumulative freshman-season dataset for reference.<br><br>
+        <b>Event Record — Compadres Collegiate:</b> Rounds were played at <b>Iberostar Playa Paraíso GC</b> (Par 72, 6,683 yards). Field scoring averages were recorded at <b>77.10 overall</b> (R1: 78.04 | R2: 77.25 | R3: 76.00). All three rounds were logged as <b>counting scores</b>. Event scoring outcome was recorded as <b>Even Par relative to the field scoring baseline</b>.<br><br>
+        <b>Scoring Record Summary:</b> <b>Counting score rate</b> is documented at <b>100% (3/3 rounds — event)</b> and <b>93.3% (14/15 rounds — freshman season cumulative)</b>.
+      </p>
     </div>
 
     <div style="margin-top: 14px; background: #ffffff; padding: 22px; border-radius: 12px; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box; width: 100%;">
@@ -1546,11 +1546,10 @@
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
         <div style="font-size: 12px; color: #0c2340; font-weight: 900; text-transform: uppercase; letter-spacing: 1.2px;">Post-Round Review & Data Archiving</div>
       </div>
-    <div style="font-size: 13px; color: #4a5568; line-height: 1.7; text-align: justify; word-break: keep-all;">
-  <b>Round-by-round scoring data</b> and <b>field averages</b> are archived for reference and ongoing <b>metric calibration</b>. Post-event performance data was reviewed using <b>Clippd</b> and <b>Scoreboard</b>. At the <b>Compadres Collegiate</b>, results were recorded as <b>T3 with SG: +0.35 and Event Rank Impact: +136</b>.
-</div>
+      <div style="font-size: 13px; color: #4a5568; line-height: 1.7; text-align: justify; word-break: keep-all;">
+        <b>Round-by-round scoring data</b> and <b>field averages</b> are archived for reference and ongoing <b>metric calibration</b>. Post-event performance data was reviewed using <b>Clippd</b> and <b>Scoreboard</b>. At the <b>Compadres Collegiate</b>, results were recorded as <b>T3 with SG: +0.35 and Event Rank Impact: +136</b>.
+      </div>
     </div>
-  
   </div>
 </div>
 
