--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1410,12 +1410,12 @@
 
 <div class="master-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0 10px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 
-  <div class="roster-standings-section" style="width: 100%; margin-bottom: 40px; box-sizing: border-box; background-color: #f8f9fa; border-radius: 8px; padding: 20px;">
+  <div class="roster-standings-section" style="width: 100%; margin-bottom: 40px; box-sizing: border-box;">
     <div style="margin-bottom: 25px; box-sizing: border-box;">
-      <h3 style="font-size: 18px; color: #ffffff; margin: 0; background-color: #0c2340; padding: 12px 15px; border-left: 5px solid #ffb612; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box; border-radius: 4px;">
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#ffb612" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path><path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"></path><path d="M4 22h16"></path><path d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"></path><path d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"></path><path d="M18 2H6v7a6 6 0 0 0 12 0V2z"></path></svg>
+      <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #806600; padding-left: 15px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path><path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"></path><path d="M4 22h16"></path><path d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"></path><path d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"></path><path d="M18 2H6v7a6 6 0 0 0 12 0V2z"></path></svg>
         UTSA TEAM ROSTER METRICS 
-        <span style="font-size: 13px; color: #bdc3c7; font-weight: 600; letter-spacing: 0px;">(Freshman Season)</span>
+        <span style="font-size: 13px; color: #7f8c8d; font-weight: 600; letter-spacing: 0px;">(Freshman Season)</span>
       </h3>
     </div>
 
