--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1407,6 +1407,14 @@
   </style>
 
 
+<div class="master-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0 10px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+
+  <div class="section-separator" style="width: 100%; margin: 50px 0 30px 0; position: relative; display: flex; align-items: center; box-sizing: border-box;">
+    <div style="flex-grow: 1; height: 1px; background-color: #333333;"></div>
+    <span style="padding: 0 20px; font-size: 12px; color: #ffffff; background-color: #333333; font-weight: 800; letter-spacing: 2px; text-transform: uppercase; height: 28px; line-height: 28px; border-radius: 14px;">Season Performance Analytics</span>
+    <div style="flex-grow: 1; height: 1px; background-color: #333333;"></div>
+  </div>
+  
 
 <div class="master-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0 10px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 
