--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1409,10 +1409,14 @@
 
 <div class="master-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0 10px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 
-  <div class="section-separator" style="width: 100%; margin: 50px 0 30px 0; position: relative; display: flex; align-items: center; box-sizing: border-box;">
-    <div style="flex-grow: 1; height: 1px; background-color: #333333;"></div>
-    <span style="padding: 0 20px; font-size: 12px; color: #ffffff; background-color: #333333; font-weight: 800; letter-spacing: 2px; text-transform: uppercase; height: 28px; line-height: 28px; border-radius: 14px;">Season Performance Analytics</span>
-    <div style="flex-grow: 1; height: 1px; background-color: #333333;"></div>
+  <div class="section-separator" style="width: 100%; margin: 60px 0 40px 0; display: block; box-sizing: border-box; clear: both;">
+    <div style="display: flex; align-items: center; width: 100%; box-sizing: border-box;">
+      <div style="flex-grow: 1; height: 1px; background-color: #333333;"></div>
+      <div style="flex-shrink: 0; padding: 0 20px; font-size: 12px; color: #ffffff; background-color: #333333; font-weight: 800; letter-spacing: 2px; text-transform: uppercase; height: 28px; line-height: 28px; border-radius: 14px; box-sizing: border-box; text-align: center;">
+        Freshman Season Performance Analytics
+      </div>
+      <div style="flex-grow: 1; height: 1px; background-color: #333333;"></div>
+    </div>
   </div>
   
 
