--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1407,7 +1407,24 @@
   </style>
 
 
- 
+<div class="master-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0 10px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+
+  <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0" style="width: 100%; margin: 60px 0 40px 0; border-collapse: collapse;">
+    <tr>
+      <td style="vertical-align: middle;">
+        <div style="height: 1px; background-color: #333333; line-height: 1px; font-size: 1px;">&nbsp;</div>
+      </td>
+      <td style="width: 1px; white-space: nowrap; padding: 0 20px; vertical-align: middle;">
+        <div style="font-size: 12px; color: #ffffff; background-color: #333333; font-weight: 800; letter-spacing: 2px; text-transform: uppercase; height: 28px; line-height: 28px; border-radius: 14px; padding: 0 20px; box-sizing: border-box;">
+          Season Performance Analytics
+        </div>
+      </td>
+      <td style="vertical-align: middle;">
+        <div style="height: 1px; background-color: #333333; line-height: 1px; font-size: 1px;">&nbsp;</div>
+      </td>
+    </tr>
+  </table>
+  
 
 <div class="master-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0 10px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 
