--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1409,22 +1409,22 @@
 
 <div class="master-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0 10px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 
-  <div class="section-separator-wrapper" style="width: 100%; clear: both; float: none; margin: 0; padding: 0; box-sizing: border-box;">
-    <div class="section-separator" style="width: 100%; margin: 60px 0 40px 0; display: table; table-layout: fixed; box-sizing: border-box;">
-      <div style="display: table-row; width: 100%;">
-        <div style="display: table-cell; vertical-align: middle; width: auto;">
-          <div style="height: 1px; background-color: #333333;"></div>
-        </div>
-        <div style="display: table-cell; vertical-align: middle; width: 1px; white-space: nowrap; padding: 0 20px;">
-          <div style="font-size: 12px; color: #ffffff; background-color: #333333; font-weight: 800; letter-spacing: 2px; text-transform: uppercase; height: 28px; line-height: 28px; border-radius: 14px; padding: 0 20px; box-sizing: border-box; text-align: center;">
+  <div style="width: 100%; margin: 60px 0 40px 0; clear: both; display: block; box-sizing: border-box;">
+    <table role="presentation" style="width: 100%; border-collapse: collapse; margin: 0; padding: 0; table-layout: fixed;">
+      <tr>
+        <td style="vertical-align: middle; padding: 0;">
+          <div style="height: 2px; background-color: #333333;"></div>
+        </td>
+        <td style="width: 1px; white-space: nowrap; padding: 0 15px;">
+          <div style="font-size: 13px; color: #ffffff; background-color: #333333; font-weight: 800; letter-spacing: 1.5px; text-transform: uppercase; height: 32px; line-height: 32px; padding: 0 25px; border-radius: 4px; box-sizing: border-box; text-align: center;">
             Season Performance Analytics
           </div>
-        </div>
-        <div style="display: table-cell; vertical-align: middle; width: auto;">
-          <div style="height: 1px; background-color: #333333;"></div>
-        </div>
-      </div>
-    </div>
+        </td>
+        <td style="vertical-align: middle; padding: 0;">
+          <div style="height: 2px; background-color: #333333;"></div>
+        </td>
+      </tr>
+    </table>
   </div>
   
   
